fix(ffmpeg-preset-ui/task/frontend): improve modal z-index

--- a/ffmpeg-preset-ui/src/components/Modal.scss
+++ b/ffmpeg-preset-ui/src/components/Modal.scss
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.6);
+    z-index: 100;
   }
 
   & {
